Adding missing peerdeps & updated documentation

--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "repository": "ImprontaAdvance/eslint-config",
   "peerDependencies": {
     "eslint": ">=4.3.0",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-react": "^7.1.0",
     "prettier": "^1.5.3"
   }
