New eslint based on eslint-create-react-app

--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
   ],
   "repository": "ImprontaAdvance/eslint-config",
   "peerDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": ">=4.3.0",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-flowtype": "^2.35.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.0",
-    "eslint-plugin-prettier": "^2.2.0",
-    "eslint-plugin-react": "^8.2.0",
-    "prettier": "^1.5.3"
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-config-react-app": "^4.0.0",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.5.0",
+    "prettier": "^1.17.0"
   }
 }
