--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "@improntaadvance/eslint-config",
-  "version": "0.9.1",
-  "description": "A basic ESlint configuration for React projects with Prettier and FlowType",
+  "version": "0.10.0",
+  "description": "A basic ESlint configuration for React projects with Prettier",
   "main": "index.js",
   "keywords": [
     "eslint",
     "prettier",
-    "flowtype",
-    "flow-bin",
     "react"
   ],
-  "author": "Marco Liberati <marco.l@improntaadv.com>",
-  "license": "ISC",
+  "author": "Matteo Manchi <matteo.m@improntaadvance.com>",
+  "license": "MIT",
   "files": [
     "index.js"
   ],
